--- a/app/src/main/res/layout-normal/fragment_page.xml
+++ b/app/src/main/res/layout-normal/fragment_page.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center_horizontal"
     android:layout_width="fill_parent" android:layout_height="fill_parent">
 
@@ -10,4 +11,15 @@
         android:layout_height="wrap_content">
     </android.support.v4.view.ViewPager>
 
-</LinearLayout>
+
+    <realizer.com.schoolgenieparent.view.ProgressWheel
+        android:id="@+id/loading"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center"
+        app:matProg_barColor="@color/colorAccent"
+        app:matProg_progressIndeterminate="true"
+        />
+</RelativeLayout>
