--- a/app/src/main/res/layout-large/main_activity.xml
+++ b/app/src/main/res/layout-large/main_activity.xml
@@ -3,21 +3,33 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="7">
+    android:background="@color/white">
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.5"
         android:text="Welcome to"
-        android:textSize="24sp"
-        android:layout_marginTop="90dp"
+        android:textSize="18sp"
+        android:layout_marginTop="10dp"
         android:id="@+id/txtWelcomeSchGen"
         android:textColor="#FFF"
         android:gravity="center"/>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:background="@drawable/registrationbg"
+        android:backgroundTintMode="screen"
+        android:layout_height="0dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_weight="3">
+
+    </FrameLayout>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1.5"
+        android:layout_weight="1"
         android:padding="10dp"
         android:id="@+id/txtSchoolNm"
         android:layout_marginLeft="20dp"
@@ -30,7 +42,7 @@
         android:layout_height="0dp"
         android:layout_weight="0.5"
         android:text="An Escape through day to day hassles."
-        android:textSize="23sp"
+        android:textSize="20sp"
         style="@style/TextViewsBold15"
         android:id="@+id/txtSlogan"
         android:textColor="#ED0F7D"
@@ -46,58 +58,59 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4"
+        android:layout_weight="2"
         android:layout_gravity="center"
         android:padding="10dp"
         android:orientation="vertical"
         android:gravity="center">
         <LinearLayout
-            android:layout_width="400dp"
-            android:layout_height="80dp"
+            android:layout_width="230dp"
+            android:layout_height="wrap_content"
             android:background="@drawable/border"
             android:orientation="horizontal"
+            android:layout_marginBottom="20dp"
             android:id="@+id/RegisterLayout">
-            <TextView
-                android:layout_width="65dp"
-                android:layout_height="65dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginLeft="8dp"
-                android:gravity="center|left"
-                android:background="@drawable/regicon"/>
+            <!-- <TextView
+                 android:layout_width="35dp"
+                 android:layout_height="35dp"
+                 android:layout_marginTop="8dp"
+                 android:layout_marginLeft="8dp"
+                 android:gravity="center|left"
+                 android:background="@drawable/regicon"/>-->
             <Button
                 android:text="Register"
-                android:layout_height="80dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:textColor="#FFF"
                 android:id="@+id/btn_main_register"
                 android:layout_width="180dp"
                 android:background="#00000000"
-                android:textSize="24sp"
+                android:textSize="22sp"
                 android:layout_gravity="center|right"
                 />
         </LinearLayout>
         <LinearLayout
-            android:layout_width="400dp"
-            android:layout_height="80dp"
+            android:layout_width="230dp"
+            android:layout_height="wrap_content"
             android:background="@drawable/border"
-            android:layout_marginTop="60dp"
             android:orientation="horizontal"
+            android:layout_marginTop="10dp"
             android:id="@+id/LoginLayout">
-            <TextView
-                android:layout_width="63dp"
-                android:layout_height="63dp"
-                android:gravity="center"
-                android:layout_marginTop="8dp"
-                android:layout_marginLeft="7dp"
-                android:background="@drawable/loginicon" />
+            <!--   <TextView
+                   android:layout_width="33dp"
+                   android:layout_height="33dp"
+                   android:gravity="center"
+                   android:layout_marginTop="8dp"
+                   android:layout_marginLeft="7dp"
+                   android:background="@drawable/loginicon" />-->
             <Button
                 android:text="Login"
-                android:layout_height="80dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:id="@+id/btn_main_login"
                 android:layout_width="220dp"
                 android:textColor="#FFF"
-                android:textSize="24sp"
+                android:textSize="22sp"
                 android:layout_gravity="center_horizontal"
                 android:background="#00000000"
                 />
@@ -108,7 +121,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
-        android:layout_weight="1">
+        android:layout_weight="0.5">
         <TextView style="@style/TextViewsBold15"
             android:layout_marginBottom="3dp"
             android:layout_gravity="bottom|center_horizontal"
@@ -116,111 +129,3 @@
             android:text="© 2016 RealizerTech"/>
     </FrameLayout>
 </LinearLayout>
-
-
-    <!--<?xml version="1.0" encoding="utf-8"?>-->
-<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:orientation="vertical"-->
-    <!--android:background="#FFF">-->
-    <!--&lt;!&ndash;91C9FF&ndash;&gt;-->
-    <!--<TextView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="Welcome to"-->
-        <!--android:textSize="26sp"-->
-        <!--android:layout_marginTop="90dp"-->
-        <!--android:id="@+id/txtWelcomeSchGen"-->
-        <!--android:textColor="#FFF"-->
-        <!--android:gravity="center"/>-->
-    <!--<TextView-->
-        <!--android:layout_width="450dp"-->
-        <!--android:layout_height="120dp"-->
-        <!--android:padding="10dp"-->
-        <!--android:id="@+id/txtSchoolNm"-->
-        <!--android:layout_marginTop="30dp"-->
-        <!--android:layout_gravity="center"-->
-        <!--android:background="@drawable/genie_logo_action_bar"/>-->
-    <!--&lt;!&ndash;<View&ndash;&gt;-->
-        <!--&lt;!&ndash;android:layout_width="250dp"&ndash;&gt;-->
-        <!--&lt;!&ndash;android:layout_height="10dp"&ndash;&gt;-->
-        <!--&lt;!&ndash;android:layout_gravity="center"&ndash;&gt;-->
-        <!--&lt;!&ndash;android:background="@drawable/shadow">&ndash;&gt;-->
-    <!--&lt;!&ndash;</View>&ndash;&gt;-->
-
-
-    <!--<LinearLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="center"-->
-        <!--android:padding="10dp"-->
-        <!--android:layout_marginTop="100dp"-->
-        <!--android:orientation="vertical"-->
-        <!--android:gravity="center">-->
-        <!--<LinearLayout-->
-            <!--android:layout_width="400dp"-->
-            <!--android:layout_height="80dp"-->
-            <!--android:background="@drawable/border"-->
-            <!--android:orientation="horizontal"-->
-            <!--android:id="@+id/RegisterLayout">-->
-            <!--<TextView-->
-                <!--android:layout_width="65dp"-->
-                <!--android:layout_height="65dp"-->
-                <!--android:layout_marginTop="8dp"-->
-                <!--android:layout_marginLeft="8dp"-->
-                <!--android:gravity="center|left"-->
-                <!--android:background="@drawable/regicon"/>-->
-            <!--<Button-->
-                <!--android:text="Register"-->
-                <!--android:layout_height="80dp"-->
-                <!--android:layout_weight="1"-->
-                <!--android:textColor="#FFF"-->
-                <!--android:id="@+id/btn_main_register"-->
-                <!--android:layout_width="180dp"-->
-                <!--android:background="#00000000"-->
-                <!--android:textSize="26sp"-->
-                <!--android:layout_gravity="center|right"-->
-                <!--/>-->
-        <!--</LinearLayout>-->
-        <!--<LinearLayout-->
-            <!--android:layout_width="400dp"-->
-            <!--android:layout_height="80dp"-->
-            <!--android:background="@drawable/border"-->
-            <!--android:layout_marginTop="120dp"-->
-            <!--android:orientation="horizontal"-->
-            <!--android:id="@+id/LoginLayout">-->
-            <!--<TextView-->
-                <!--android:layout_width="63dp"-->
-                <!--android:layout_height="63dp"-->
-                <!--android:gravity="center"-->
-                <!--android:layout_marginTop="8dp"-->
-                <!--android:layout_marginLeft="7dp"-->
-                <!--android:background="@drawable/loginicon" />-->
-            <!--<Button-->
-                <!--android:text="Login"-->
-                <!--android:layout_height="80dp"-->
-                <!--android:layout_weight="1"-->
-                <!--android:id="@+id/btn_main_login"-->
-                <!--android:layout_width="220dp"-->
-                <!--android:textColor="#FFF"-->
-                <!--android:textSize="26sp"-->
-                <!--android:layout_gravity="center_horizontal"-->
-                <!--android:background="#00000000"-->
-                <!--/>-->
-        <!--</LinearLayout>-->
-
-    <!--</LinearLayout>-->
-    <!--<FrameLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="0dp"-->
-        <!--android:layout_marginTop="10dp"-->
-        <!--android:layout_weight="1">-->
-        <!--<TextView style="@style/TextViewsBold15"-->
-            <!--android:layout_marginBottom="0dp"-->
-            <!--android:layout_gravity="bottom|center_horizontal"-->
-            <!--android:textColor="#4682B4"-->
-            <!--android:text="© 2016 RealizerTech"/>-->
-    <!--</FrameLayout>-->
-<!--</LinearLayout>-->
-
