--- a/app/src/main/res/layout-normal/fullimageview_parent.xml
+++ b/app/src/main/res/layout-normal/fullimageview_parent.xml
@@ -1,29 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
+
     android:layout_height="fill_parent"
     android:background="#000000"
     android:orientation="vertical" >
 
-
-
     <realizer.com.schoolgenieparent.view.ZoomImage
+        android:layout_weight="1"
         android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"/>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_weight="0.1"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/txtcounter"
         android:textSize="15dp"
         android:textColor="#ffffff"
         android:text="test"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp"/>
-
-</RelativeLayout>
+        android:padding="5dp"/>
+   <!-- <realizer.com.schoolgenieparent.view.ProgressWheel
+        android:id="@+id/loading"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:visibility="visible"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center"
+        app:matProg_barColor="@color/colorAccent"
+        app:matProg_progressIndeterminate="true"
+        />-->
+</LinearLayout>
