--- a/app/src/main/res/layout-normal/parent_dashboard.xml
+++ b/app/src/main/res/layout-normal/parent_dashboard.xml
@@ -6,19 +6,7 @@
     android:layout_height="match_parent"
     android:weightSum="13"
     >
-    <!--<FrameLayout style="@style/SubFrameLayoutWeight1"-->
-        <!--android:layout_height="45dp"-->
-        <!--android:layout_weight="0.3">-->
-        <!--<TextView style="@style/TextViewNormal.marginRight"-->
-            <!--android:layout_gravity="center"-->
-            <!--android:textColor="#000000"-->
-            <!--android:gravity="center"-->
-            <!--android:textStyle="normal"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="30dp"-->
-            <!--android:textSize="18dp"-->
-            <!--android:text="Parent Dashboard"/>-->
-    <!--</FrameLayout>-->
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -59,8 +47,59 @@
                         style="@style/TextFont"
                         android:layout_width="90dp"
                         android:layout_height="150dp"
-                        android:id="@+id/txtpdashhomework"
+                        android:id="@+id/txtpdashstudentlist"
                         android:layout_marginTop="2dp"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:background="#ffffff"
+                        android:drawablePadding="5dip"
+                        android:layout_weight="1"
+                        android:drawableTop="@drawable/myclass_icon"
+                        android:text="Student List"/>
+                    <Button
+                        style="@style/TextFont"
+                        android:layout_width="90dp"
+                        android:layout_height="150dp"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:layout_marginLeft="2dp"
+                        android:layout_marginRight="2dp"
+                        android:id="@+id/txtpdashpupilinfo"
+                        android:background="#ffffff"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:drawableTop="@drawable/mypupil_icon"
+                        android:text="My Pupil"/>
+
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#d3d3d3"
+                    android:orientation="horizontal">
+
+                    <Button
+                        style="@style/TextFont"
+                        android:layout_width="90dp"
+                        android:layout_height="150dp"
+                        android:id="@+id/txtpdashtrack"
+                        android:background="#ffffff"
+                        android:layout_marginLeft="2dp"
+                        android:layout_marginBottom="2dp"
+                        android:layout_marginRight="2dp"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:drawablePadding="5dip"
+                        android:layout_weight="1"
+                        android:enabled="false"
+                        android:drawableTop="@drawable/mypupil_icon"
+                        android:text="Tracking"/>
+                    <Button
+                        style="@style/TextFont"
+                        android:layout_width="90dp"
+                        android:layout_height="150dp"
+                        android:id="@+id/txtpdashhomework"
                         android:paddingTop="5dp"
                         android:paddingBottom="5dp"
                         android:background="#ffffff"
@@ -72,15 +111,14 @@
                         style="@style/TextFont"
                         android:layout_width="90dp"
                         android:layout_height="150dp"
-                        android:paddingTop="5dp"
-                        android:paddingBottom="5dp"
-                        android:layout_marginLeft="2dp"
-                        android:layout_marginBottom="2dp"
-                        android:layout_marginRight="2dp"
                         android:id="@+id/txtpdashclasswork"
+                        android:paddingTop="5dp"
+                        android:drawablePadding="5dip"
+                        android:paddingBottom="5dp"
+                        android:layout_marginRight="2dp"
+                        android:layout_marginLeft="2dp"
                         android:background="#ffffff"
                         android:layout_weight="1"
-                        android:gravity="center"
                         android:drawableTop="@drawable/homework_icon"
                         android:text="Classwork"/>
 
@@ -126,9 +164,9 @@
                         android:id="@+id/txtpdashfuncenter"
                         android:paddingTop="5dp"
                         android:paddingBottom="5dp"
+                        android:layout_marginLeft="2dp"
                         android:layout_marginRight="2dp"
                         android:enabled="false"
-                        android:layout_marginLeft="2dp"
                         android:background="#ffffff"
                         android:layout_weight="1"
                         android:drawableTop="@drawable/funcenter_icon"
