--- a/app/src/main/res/layout-normal/registration2_activity.xml
+++ b/app/src/main/res/layout-normal/registration2_activity.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android" >
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bgimg"
+    android:background="@drawable/regbggradient"
     android:weightSum="11.2">
     <FrameLayout
         android:layout_weight="1"
@@ -49,7 +54,7 @@
                 android:layout_width="90dp"
                 android:gravity="center"
                 android:background="@drawable/school_genie_logo"
-                android:layout_height="wrap_content" />
+                android:layout_height="90dp" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -187,12 +192,15 @@
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
 
-               <EditText
+               <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingLeft="10dp"
                    android:hint="Date of Birth"
-                   android:id="@+id/edt_reg_dob"
+                   android:gravity="center|left"
+                   android:textSize="18sp"
+                   android:id="@+id/txt_reg_dob"
+                   android:onClick="regdobclick"
                    android:inputType="text"
                    android:fontFamily="sans-serif-condensed"
                    android:background="@drawable/square"
@@ -259,7 +267,7 @@
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingLeft="10dp"
-                   android:hint="Confirm Pass"
+                   android:hint="Confirm Password"
                    android:inputType="textPassword"
                    android:id="@+id/edt_reg_confirmpass"
                    android:fontFamily="sans-serif-condensed"
@@ -276,7 +284,7 @@
                    android:layout_width="120dp"
                    android:background="@drawable/login_button_orange"
                    android:layout_height="50dp"
-                   android:layout_marginTop="20dp"
+                   android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textSize="22dp"
                    android:id="@+id/btnRegister"
@@ -287,3 +295,4 @@
    </FrameLayout>
 
 </LinearLayout>
+</ScrollView>
