--- a/app/src/main/res/menu/activity_drawer_drawer.xml
+++ b/app/src/main/res/menu/activity_drawer_drawer.xml
@@ -8,17 +8,21 @@
             android:icon="@drawable/home_drawer"
             android:title="@string/DashBoard" />
 
-        <!--<item android:id="@+id/nav_myclass"-->
-            <!--android:icon="@drawable/myclass_drawer"-->
-            <!--android:title="@string/MyClass" />-->
+        <item android:id="@+id/nav_myclass"
+            android:icon="@drawable/myclass_drawer"
+            android:title="@string/MyClass" />
 
-        <item android:id="@+id/nav_homework"
-            android:icon="@drawable/homework_drawer"
-            android:title="@string/Homework" />
+        <item android:id="@+id/nav_mypupil"
+            android:icon="@drawable/myclass_drawer"
+            android:title="@string/MyPupil" />
 
         <item android:id="@+id/nav_timetable"
             android:icon="@drawable/timetable_drawer"
             android:title="@string/Invitetoother" />
+
+        <item android:id="@+id/nav_homework"
+            android:icon="@drawable/homework_drawer"
+            android:title="@string/Homework" />
 
         <item android:id="@+id/nav_classwork"
             android:icon="@drawable/homework_drawer"
