--- a/app/src/main/res/drawable/spineerselector.xml
+++ b/app/src/main/res/drawable/spineerselector.xml
@@ -9,7 +9,7 @@
                 <shape>
                     <gradient android:angle="90" android:endColor="#ffffff" android:startColor="#ffffff" android:type="linear" />
 
-                    <stroke android:width="1dp" android:color="#fec10e" />
+                    <stroke android:width="1dp" android:color="@color/colorPrimary" />
 
                     <corners android:radius="5dp" />
 
@@ -19,8 +19,9 @@
 
 
 
-            <item > <bitmap android:gravity="bottom|right" android:src="@drawable/dropdownarrow" />
-
+            <item > <bitmap android:gravity="center_horizontal|right" android:src="@drawable/navigation_arrow_spinner">
+                <padding android:bottom="0dp" android:left="0dp" android:right="10dp" android:top="0dp" />
+                </bitmap>
           </item>
 
         </layer-list>
