--- a/app/src/main/res/layout-normal/parent_dashboard.xml
+++ b/app/src/main/res/layout-normal/parent_dashboard.xml
@@ -93,7 +93,7 @@
                         android:drawablePadding="5dip"
                         android:layout_weight="1"
                         android:enabled="false"
-                        android:drawableTop="@drawable/mypupil_icon"
+                        android:drawableTop="@drawable/tracking3d"
                         android:text="Tracking"/>
                     <Button
                         style="@style/TextFont"
@@ -119,7 +119,7 @@
                         android:layout_marginLeft="2dp"
                         android:background="#ffffff"
                         android:layout_weight="1"
-                        android:drawableTop="@drawable/homework_icon"
+                        android:drawableTop="@drawable/classwork3d"
                         android:text="Classwork"/>
 
 
