--- a/app/src/main/res/layout-normal/parent_homework_layout.xml
+++ b/app/src/main/res/layout-normal/parent_homework_layout.xml
@@ -120,5 +120,14 @@
         android:textColor="@color/black"
         android:visibility="gone" />
 
-
+    <realizer.com.schoolgenieparent.view.ProgressWheel
+        android:id="@+id/loading"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center"
+        app:matProg_barColor="@color/colorAccent"
+        app:matProg_progressIndeterminate="true"
+        />
 </RelativeLayout>
