--- a/app/src/main/res/layout-normal/teacher_myclass_fragment.xml
+++ b/app/src/main/res/layout-normal/teacher_myclass_fragment.xml
@@ -110,6 +110,16 @@
 
     </LinearLayout>
 
+    <realizer.com.schoolgenieparent.view.ProgressWheel
+        android:id="@+id/loading"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        app:matProg_barColor="@color/colorAccent"
+        app:matProg_progressIndeterminate="true"
+        />
+
    <!-- <android.support.design.widget.FloatingActionButton
         android:id="@+id/newAttendance"
         android:layout_width="wrap_content"
