--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="realizer.com.schoolgenieparent.DrawerActivity">
+    tools:context=".DrawerActivity">
 
     <item
         android:id="@+id/action_search"
@@ -14,7 +14,15 @@
         android:id="@+id/action_switchclass"
         android:orderInCategory="100"
         android:title="Switch Class"
+        android:visible="false"
         android:icon="@android:drawable/ic_popup_sync"
+        app:showAsAction="always" />
+
+    <item
+        android:id="@+id/action_done"
+        android:orderInCategory="100"
+        android:title="Done"
+        android:icon="@drawable/ic_action_accept"
         app:showAsAction="always" />
 
 
