--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="greycolor">#d3d3d3</color>
     <color name="darkgreycolor">#989898</color>
     <color name="lightGrey">#DCDCDC</color>
+    <color name="darkgrey">#666666</color>
 </resources>
