--- a/app/src/main/res/layout-normal/row_multi_photo_item_hw.xml
+++ b/app/src/main/res/layout-normal/row_multi_photo_item_hw.xml
@@ -11,12 +11,15 @@
         android:layout_height="100dp"
         android:background="@drawable/outer_rect"/>
 
-    <CheckBox
+    <ImageButton
         android:id="@+id/chkImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_gravity="left|top"
-        android:layout_margin="10dp"
+        android:background="@color/white"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="5dp"
+        android:src="@drawable/ic_close_black"
         android:layout_alignRight="@+id/imgThumb"
         android:layout_alignEnd="@+id/imgThumb" />
 </RelativeLayout>
