commited by farhan

--- a/app/src/main/res/layout-normal/contact_list_fragment.xml
+++ b/app/src/main/res/layout-normal/contact_list_fragment.xml
@@ -13,18 +13,11 @@
         android:id="@+id/data_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/ok_button"
+        android:layout_above="@+id/pbcontainer"
         android:layout_below="@+id/input_search"
         android:gravity="center|top"
         android:orientation="vertical" />
-    <Button
-        android:id="@+id/ok_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerInParent="true"
-        android:text=" OK "
-        android:textSize="18dp" />
+
     <RelativeLayout
         android:id="@+id/pbcontainer"
         android:layout_width="match_parent"
