--- a/app/src/main/res/layout-normal/new_homework_layout.xml
+++ b/app/src/main/res/layout-normal/new_homework_layout.xml
@@ -25,8 +25,9 @@
         android:gravity="center"
         android:horizontalSpacing="4dip"
         android:numColumns="3"
-        android:visibility="gone"
+        android:visibility="visible"
         android:layout_marginTop="5dp"
+        android:layout_marginLeft="13dp"
         android:stretchMode="columnWidth"
         android:layout_below="@+id/txttclassname"
         android:layout_above="@+id/ll_compose_layout"
@@ -38,6 +39,7 @@
         android:background="@color/white"
         android:id="@+id/addimage"
         android:src="@drawable/noicon"
+        android:visibility="gone"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/txttclassname"
         android:layout_above="@+id/ll_compose_layout"
