--- a/app/src/main/res/layout-normal/parent_dashboard.xml
+++ b/app/src/main/res/layout-normal/parent_dashboard.xml
@@ -7,6 +7,7 @@
     >
 
     <LinearLayout
+        android:background="@drawable/border_line"
         android:orientation="vertical"
         android:layout_weight="1.5"
         android:layout_width="match_parent"
@@ -86,10 +87,7 @@
 
 
     </LinearLayout>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="@drawable/border_line"/>
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_weight="1"
