Committed by Farhan

--- a/app/src/main/res/layout-large/parent_tracking_alert_dailog.xml
+++ b/app/src/main/res/layout-large/parent_tracking_alert_dailog.xml
@@ -23,6 +23,15 @@
             android:layout_height="30dp"
             android:paddingLeft="10dp"
             android:maxLength="30"/>
+
+        <EditText style="@style/EditTextMultiline"
+            android:hint=" Enter Driver's UserID"
+            android:layout_marginTop="20dp"
+            android:id="@+id/driverUserID"
+            android:layout_height="30dp"
+            android:paddingLeft="10dp"
+            android:maxLength="30"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -34,27 +43,17 @@
                 android:layout_height="wrap_content">
 
                 <Button
-                    android:text="Show Info"
+                    android:text="Show Map"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
-                    android:id="@+id/ShowInfo"
+                    android:id="@+id/ShowMap"
                     android:layout_weight="1"
                     android:layout_margin="10dp"
                     android:fontFamily="sans-serif-condensed"
                     android:layout_gravity="left|center_vertical"
                     android:background="@drawable/buttonselector"
                     />
-                <Button
-                    android:text="Show Map"
-                    android:layout_height="40dp"
-                    android:id="@+id/ShowMap"
-                    android:layout_width="wrap_content"
-                    android:layout_marginRight="10dp"
-                    android:layout_weight="1"
-                    android:fontFamily="sans-serif-condensed"
-                    android:layout_gravity="right|center_vertical"
-                    android:background="@drawable/buttonselector"
-                    />
+
                 <Button
                     android:text="Cancel"
                     android:layout_height="40dp"
@@ -70,13 +69,13 @@
 
         </LinearLayout>
 
-     <!--   <Button style="@style/LoginButton"
-            android:text="Cancel"
-            android:layout_height="40dp"
-            android:id="@+id/CancelTrack"
-            android:layout_width="100dp"
-            android:layout_gravity="center"
-            android:backgroundcal="@drawable/buttonselector"
-            />-->
+        <!--   <Button style="@style/LoginButton"
+               android:text="Cancel"
+               android:layout_height="40dp"
+               android:id="@+id/CancelTrack"
+               android:layout_width="100dp"
+               android:layout_gravity="center"
+               android:backgroundcal="@drawable/buttonselector"
+               />-->
     </LinearLayout>
 </LinearLayout>
